--- a/ui.apps/src/main/jcr_root/apps/bulma/components/image/image.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/image/image.html
@@ -1,19 +1,5 @@
-<sly data-sly-use.model="pl.ds.bulma.components.models.ButtonComponent">
-    <sly data-sly-test="${model.type == 'button'}">
-        <sly data-sly-test.disabled="${model.isDisabled}">
-            <button class="button ${model.buttonClasses @ join=' '}" disabled>
-                ${model.label}
-            </button>
-        </sly>
-        <sly data-sly-test="${!disabled}">
-            <button class="button ${model.buttonClasses @ join=' '}">
-                ${model.label}
-            </button>
-        </sly>
-    </sly>
-    <sly data-sly-test="${model.type == 'a'}">
-        <a href="${model.url}" class="button ${model.buttonClasses @ join=' '}" target="${model.openInNewTab && model.url != '' ? '_blank' : ''}">
-            ${model.label}
-        </a>
-    </sly>
+<sly data-sly-use.model="pl.ds.bulma.components.models.ImageComponent">
+    <figure class="image ${model.style}">
+        <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference} ">
+    </figure>
 </sly>
