HL-333 Add unit tests for Image Component

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/image/image.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/image/image.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.ImageComponent">
     <figure class="image ${model.style}">
-        <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference} ">
+        <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}" alt="${model.alt}">
     </figure>
 </sly>
