--- a/ui.apps/src/main/jcr_root/apps/bulma/components/image/image.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/image/image.html
@@ -1,4 +1,10 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.ImageComponent">
+    <sly data-sly-test="${!model.assetReference}">
+        <div style="padding-top: 40px;" data-sly-unwrap="${!wcmmode.isEdit}">
+            <sly data-sly-repeat.paragraph="${resource.children}"
+                 data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
+        </div>
+    </sly>
     <figure class="image ${model.style}">
         <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}" alt="${model.alt}">
     </figure>
