Add Message and Notification component with JS, cleanup of common classes

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/page/body-content.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/page/body-content.html
@@ -1,1 +1,3 @@
-<sly data-sly-resource="${'pagecontainer' @ resourceType=properties.resourceType}"></sly>
+<sly data-sly-resource="${'pagecontainer' @ resourceType=properties.resourceType}">
+</sly>
+<script src="/apps/bulma/web_root/main.js"></script>
