--- a/ui.apps/src/main/jcr_root/apps/bulma/components/notification/notification.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/notification/notification.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.NotificationComponent">
     <div class="notification ${model.notificationClasses @ join=' '}">
-        <sly data-sly-test=${model.button}>
+        <sly data-sly-test="${model.showButton}">
             <button class="delete"></button>
         </sly>
         ${model.content @ context='html'}
