Add title component

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/pricingplan/pricingplan.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/pricingplan/pricingplan.html
@@ -22,7 +22,7 @@
         </div>
         <div class="plan-footer">
             <sly data-sly-test="${model.showButton}">
-                <button class="button is-fullwidth" disabled="disabled">Current plan</button>
+                <button class="button is-fullwidth" disabled="disabled">${model.buttonLabel}</button>
             </sly>
         </div>
     </div>
