--- a/ui.apps/src/main/jcr_root/apps/bulma/components/container/container.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/container/container.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.ContainerComponent">
-    <div class="container ${model.containerClasses @ join=' '}">
+    <div class="container ${model.containerStyle}">
         <div style="padding-top: 40px;" data-sly-unwrap="${!wcmmode.isEdit}">
             <sly data-sly-test="${resource.hasChildren}">
                 <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
