apply sizes to columns

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/columns/columns.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/columns/columns.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.model="pl.ds.bulma.components.models.ColumnsComponent">
+<sly data-sly-use.model="pl.ds.bulma.components.models.columns.ColumnsComponent">
     <sly data-sly-test="${resource.hasChildren}">
         <div class="m-4" data-sly-unwrap="${!wcmmode.isEdit}">
             <div class="columns" data-sly-unwrap="${!wcmmode.isEdit && model.hasOnlyColumnsWhichHasNoChildren}">
