improve editor view layout

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/columns/column/column.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/columns/column/column.html
@@ -5,5 +5,5 @@
 </sly>
 <sly data-sly-test="${!resource.hasChildren}">
     <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
-         data-sly-call="${lib.placeholder @ classes='column'}"></sly>
+         data-sly-call="${lib.placeholder @ classes='column m-3'}"></sly>
 </sly>
