First draft of improvement

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/card/card.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/card/card.html
@@ -32,8 +32,8 @@
                 </div>
             </div>
 
-            <div class="content">
-                ${model.content}
+            <div data-sly-test="model.content" class="content">
+                ${model.content @ context='html'}
             </div>
         </div>
 
