Add fixed size to thumbnail

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/card/card.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/card/card.html
@@ -21,7 +21,7 @@
             <div class="media">
                 <sly data-sly-test="${model.thumbnail.assetReference}">
                     <div class="media-left">
-                        <figure class="image is-48x48">
+                        <figure class="image ${model.thumbnail.style}">
                             <img src="${model.thumbnail.assetReference}" alt="${model.thumbnail.alt}">
                         </figure>
                     </div>
