Create tag component

--- a/ui.apps/src/main/jcr_root/apps/bulma/components/pagecontainer/pagecontainer.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/pagecontainer/pagecontainer.html
@@ -1,11 +1,11 @@
 <sly data-sly-test.hasChildren="${resource.hasChildren}">
-    <div style="padding: 20px;" data-sly-unwrap="${!wcmmode.isEdit}">
+    <div data-sly-unwrap="${!wcmmode.isEdit}">
         <sly data-sly-repeat.paragraph="${resource.children}"
              data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
     </div>
 </sly>
 <sly data-sly-test="${!hasChildren}">
-    <div style="padding: 20px;" data-sly-unwrap="${!wcmmode.isEdit}">
+    <div style="padding-top: 40px;" data-sly-unwrap="${!wcmmode.isEdit}">
         <sly data-sly-repeat.paragraph="${resource.children}"
              data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
     </div>
