--- a/ui.apps/src/main/jcr_root/apps/bulma/components/card/card.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/card/card.html
@@ -11,7 +11,7 @@
 
         <sly data-sly-test="${model.image.assetReference}">
             <div class="card-image">
-                <figure class="image is-4by3">
+                <figure class="image ${model.image.style}">
                     <img src="${model.image.assetReference}" alt="${model.image.alt}">
                 </figure>
             </div>
@@ -21,7 +21,7 @@
             <div class="media">
                 <sly data-sly-test="${model.thumbnail.assetReference}">
                     <div class="media-left">
-                        <figure class="image is-48x48">
+                        <figure class="image ${model.thumbnail.style ? model.thumbnail.style : 'is-48x48'}">
                             <img src="${model.thumbnail.assetReference}" alt="${model.thumbnail.alt}">
                         </figure>
                     </div>
@@ -32,8 +32,8 @@
                 </div>
             </div>
 
-            <div class="content">
-                ${model.content}
+            <div data-sly-test="model.content" class="content">
+                ${model.content @ context='html'}
             </div>
         </div>
 
