--- a/ui.apps/src/main/jcr_root/apps/bulma/components/breadcrumb/breadcrumb.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/breadcrumb/breadcrumb.html
@@ -13,7 +13,7 @@
                 </a>
                 </li>
             </sly>
-            <sly data-sly-list.element="${!model.elements}">
+            <sly data-sly-test="${!model.elements}">
                 <li>
                     <a href="#">
                         <span>Test</span>
