--- a/ui.apps/src/main/jcr_root/apps/bulma/components/columns/column/column.html
+++ b/ui.apps/src/main/jcr_root/apps/bulma/components/columns/column/column.html
@@ -1,10 +1,13 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.columns.ColumnComponent">
-    <sly data-sly-test="${resource.hasChildren}">
+    <sly data-sly-test.childrenComponents="${model.childrenComponents}"></sly>
+    <sly data-sly-test="${!childrenComponents.empty}">
         <div class="column ${model.classes @ join=' '}">
-            <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+            <sly data-sly-repeat="${childrenComponents}">
+                <sly data-sly-resource="${item}"></sly>
+            </sly>
         </div>
     </sly>
-    <sly data-sly-test="${!resource.hasChildren}">
+    <sly data-sly-test="${childrenComponents.empty}">
         <sly data-sly-test.modelClasses="${model.classes @ join=' '}"></sly>
         <sly data-sly-test.placeholderClasses="${['column m-3', modelClasses] @ join=' '}"></sly>
         <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
