Add a button to open modal and modify it a bit

--- a/core/src/main/resources/apps/bulma/components/modal/modal.html
+++ b/core/src/main/resources/apps/bulma/components/modal/modal.html
@@ -1,18 +1,29 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.ModalComponent">
-    <div style="padding-top: 40px;" data-sly-unwrap="${!wcmmode.isEdit}">
-        <div id="${model.id}" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-content">
-                <div class="box" data-sly-unwrap="${!model.contentFrame}">
-                    <!-- Your content -->
-                    <sly data-sly-test="${resource.hasChildren}">
-                        <sly data-sly-list="${resource.children}">
-                            <sly data-sly-resource="${item}"></sly>
-                        </sly>
-                    </sly>
-                </div>
-            </div>
-            <button class="modal-close is-large" aria-label="close"></button>
+  <div style="padding-top: 40px;" data-sly-unwrap="${!wcmmode.isEdit}">
+    <sly data-sly-test="${wcmmode.isEdit}">
+      <!-- Your content -->
+      <sly data-sly-test="${resource.hasChildren}">
+        <sly data-sly-list="${resource.children}">
+          <sly data-sly-resource="${item}"></sly>
+        </sly>
+      </sly>
+    </sly>
+    <div id="${model.id}" class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <div class="box" data-sly-unwrap="${!model.contentFrame}">
+          <!-- Your content -->
+          <sly data-sly-test="${resource.hasChildren && !wcmmode.isEdit}">
+            <sly data-sly-list="${resource.children}">
+              <sly data-sly-resource="${item}"></sly>
+            </sly>
+          </sly>
         </div>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
     </div>
+  </div>
+  <button class="js-modal-trigger" data-target="${model.id}">
+    Open JS example modal
+  </button>
 </sly>
