--- a/core/src/main/resources/apps/bulma/components/level/levelitem/levelitem.html
+++ b/core/src/main/resources/apps/bulma/components/level/levelitem/levelitem.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.level.LevelItemComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="width: 200px; height: 50px">
+  <div data-sly-unwrap="${!wcmmode.isEdit}" class="level-item ${model.levelItemStyle}" style="min-width: 200px; min-height: 50px">
     <sly data-sly-test="${resource.hasChildren}">
       <div data-sly-element=${model.elementType} class="level-item ${model.levelItemStyle}">
         <sly
