--- a/core/src/main/resources/apps/bulma/components/level/positionedlevel/positionedlevel.html
+++ b/core/src/main/resources/apps/bulma/components/level/positionedlevel/positionedlevel.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.level.PositionedLevelComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="width: 300px; height: 50px">
+  <div data-sly-unwrap="${!wcmmode.isEdit}" class="${model.positionedStyle}" style="min-width: 300px; min-height: 50px">
     <sly data-sly-test="${resource.hasChildren}">
       <div class="${model.positionedStyle}">
         <sly
