--- a/core/src/main/resources/apps/bulma/components/buttonslist/buttonslist.html
+++ b/core/src/main/resources/apps/bulma/components/buttonslist/buttonslist.html
@@ -1,8 +1,10 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.ButtonsListComponent">
-  <sly data-sly-test="${resource.hasChildren}">
-    <div class="buttons ${model.hasAddons ? 'has-addons ' : ''}${model.alignment}">
-      <sly
-          data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-    </div>
-  </sly>
+  <div data-sly-unwrap="${!wcmmode.isEdit}" style="min-width: 125px; min-height: 50px">
+    <sly data-sly-test="${resource.hasChildren}">
+      <div class="buttons ${model.hasAddons ? 'has-addons ' : ''}${model.alignment}">
+        <sly
+            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+      </div>
+    </sly>
+  </div>
 </sly>
