--- a/core/src/main/resources/apps/bulma/components/card/card.html
+++ b/core/src/main/resources/apps/bulma/components/card/card.html
@@ -47,7 +47,7 @@
         <sly data-sly-test="${model.type=='icon'}">
           <div class="media-left">
                         <span class="icon ${model.textVariant}">
-                            <i class="fa fa-lg ${model.icon}"></i>
+                            <i class="${model.icon}"></i>
                         </span>
           </div>
         </sly>
