[WOS-69] Using placeholders in navbar component

--- a/core/src/main/resources/apps/bulma/components/navbar/navbar.html
+++ b/core/src/main/resources/apps/bulma/components/navbar/navbar.html
@@ -17,10 +17,14 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.navbar.NavbarComponent">
-  <nav class="navbar ${model.navbarStyle}" role="navigation" aria-label="main navigation">
-    <sly data-sly-test="${resource.hasChildren}">
-      <sly
-          data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-    </sly>
-  </nav>
+  <sly data-sly-test.classes="navbar ${model.navbarStyle}"></sly>
+  <sly data-sly-test="${resource.hasChildren}">
+    <nav class="${classes}" role="navigation" aria-label="main navigation" >
+      <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+    </nav>
+  </sly>
+  <sly data-sly-test="${!resource.hasChildren}">
+    <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+         data-sly-call="${lib.placeholder @ classes=classes}"></sly>
+  </sly>
 </sly>
