--- a/core/src/main/resources/apps/bulma/components/navbar/navbarend/navbarend.html
+++ b/core/src/main/resources/apps/bulma/components/navbar/navbarend/navbarend.html
@@ -16,13 +16,12 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.navbar.NavbarEndComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="min-width: 125px; min-height: 50px">
-    <div class="navbar-end">
-      <sly data-sly-test="${resource.hasChildren}">
-        <sly
-            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </sly>
-    </div>
+<sly data-sly-test="${resource.hasChildren}">
+  <div class="navbar-end">
+    <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
   </div>
+</sly>
+<sly data-sly-test="${!resource.hasChildren}">
+  <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+       data-sly-call="${lib.placeholder @ classes='navbar-end'}"></sly>
 </sly>
