[WOS-69] Authors CSS for navbar component to improve authoring experience

--- a/core/src/main/resources/apps/bulma/components/page/head-libs.html
+++ b/core/src/main/resources/apps/bulma/components/page/head-libs.html
@@ -20,3 +20,4 @@
       integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
       crossorigin="anonymous">
 <link rel="stylesheet" href="/apps/bulma/web_root/main.css" type="text/css">
+<link data-sly-test="${wcmmode.isEdit}" href="/apps/bulma/author/author.css" rel="stylesheet" type="text/css">
