--- a/core/src/main/resources/apps/bulma/components/tiles/tilechild/tilechild.html
+++ b/core/src/main/resources/apps/bulma/components/tiles/tilechild/tilechild.html
@@ -16,16 +16,16 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.tiles.TileComponent">
+<sly data-sly-use.model="pl.ds.bulma.components.models.tiles.TileChildComponent">
   <sly data-sly-test="${resource.hasChildren}">
-    <div class="tile ${model.classes @ join=' '}">
+    <div class="tile is-child ${model.classes @ join=' '}">
       <sly data-sly-list="${resource.children}">
         <sly data-sly-resource="${item}"></sly>
       </sly>
     </div>
   </sly>
   <sly data-sly-test="${!resource.hasChildren}">
-    <sly data-sly-test.modelClasses="tile ${model.classes @ join=' '}"></sly>
+    <sly data-sly-test.modelClasses="tile is-child ${model.classes @ join=' '}"></sly>
     <sly data-sly-test.placeholderClasses="${['column m-3', modelClasses] @ join=' '}"></sly>
     <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
          data-sly-call="${lib.placeholder @ classes=placeholderClasses}"></sly>
