--- a/core/src/main/resources/apps/bulma/components/navbar/navbarbrand/navbarbrand.html
+++ b/core/src/main/resources/apps/bulma/components/navbar/navbarbrand/navbarbrand.html
@@ -16,13 +16,26 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.ButtonsListComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="min-width: 125px; min-height: 50px">
-    <sly data-sly-test="${resource.hasChildren}">
-      <div class="buttons ${model.hasAddons ? 'has-addons ' : ''}${model.alignment}">
+<sly data-sly-use.model="pl.ds.bulma.components.models.navbar.NavbarBrandComponent">
+  <sly data-sly-test="${resource.hasChildren}">
+    <div class="navbar-brand">
+      <sly data-sly-test="${resource.hasChildren}">
         <sly
             data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </div>
+      </sly>
+      <sly data-sly-test="${model.createBurger}">
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+           data-target="navbar-menu">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </sly>
+    </div>
+  </sly>
+  <sly data-sly-test="${!resource.hasChildren}">
+    <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+         data-sly-call="${lib.placeholder @ classes='navbar-brand'}">
     </sly>
-  </div>
+  </sly>
 </sly>
