--- a/core/src/main/resources/apps/bulma/components/navbar/navbardropdown/navbardropdown.html
+++ b/core/src/main/resources/apps/bulma/components/navbar/navbardropdown/navbardropdown.html
@@ -16,13 +16,23 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.ButtonsListComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="min-width: 125px; min-height: 50px">
-    <sly data-sly-test="${resource.hasChildren}">
-      <div class="buttons ${model.hasAddons ? 'has-addons ' : ''}${model.alignment}">
-        <sly
-            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </div>
-    </sly>
+<sly data-sly-use.model="pl.ds.bulma.components.models.navbar.NavbarDropdownComponent">
+  <div class="navbar-item has-dropdown is-hoverable">
+    <a class="navbar-link ${model.hasArrow ? '' : 'is-arrowless'}">
+      ${model.label}
+    </a>
+
+    <div class="navbar-dropdown ${model.isBoxed ? 'is-boxed' : ''}">
+      <sly data-sly-list.item="${model.items}">
+        <li>
+          <a class="navbar-item" href="${item.url}">
+            ${item.label}
+          </a>
+          <sly data-sly-test="${item.hasDivider}">
+            <hr class="navbar-divider">
+          </sly>
+        </li>
+      </sly>
+    </div>
   </div>
 </sly>
