--- a/core/src/main/resources/apps/bulma/components/navbar/navbarmenu/navbarmenu.html
+++ b/core/src/main/resources/apps/bulma/components/navbar/navbarmenu/navbarmenu.html
@@ -16,13 +16,14 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.ButtonsListComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="min-width: 125px; min-height: 50px">
-    <sly data-sly-test="${resource.hasChildren}">
-      <div class="buttons ${model.hasAddons ? 'has-addons ' : ''}${model.alignment}">
-        <sly
-            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </div>
-    </sly>
-  </div>
+<sly data-sly-use.model="pl.ds.bulma.components.models.navbar.NavbarBrandComponent">
+  <sly data-sly-test="${resource.hasChildren}">
+    <div class="navbar-menu">
+      <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+    </div>
+  </sly>
+  <sly data-sly-test="${!resource.hasChildren}">
+    <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+         data-sly-call="${lib.placeholder @ classes='navbar-menu'}"></sly>
+  </sly>
 </sly>
