--- a/application/backend/src/main/resources/apps/bulma/components/hero/hero.html
+++ b/application/backend/src/main/resources/apps/bulma/components/hero/hero.html
@@ -19,13 +19,10 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.HeroComponent">
   <section class="hero ${model.heroClasses @ join=' '}">
     <div class="hero-body">
-      <p class="title">
-        ${model.title}
-      </p>
-      <sly data-sly-test="${model.subTitle}">
-        <p class="subtitle">
-          ${model.subTitle}
-        </p>
+      <sly data-sly-test="${resource.hasChildren}">
+        <sly data-sly-list="${resource.children}">
+          <sly data-sly-resource="${item}"></sly>
+        </sly>
       </sly>
     </div>
   </section>
