--- a/application/backend/src/main/resources/apps/bulma/components/hero/hero.html
+++ b/application/backend/src/main/resources/apps/bulma/components/hero/hero.html
@@ -17,13 +17,18 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.HeroComponent">
-  <section class="hero ${model.heroClasses @ join=' '}">
-    <div class="hero-body">
-      <sly data-sly-test="${resource.hasChildren}">
+  <sly data-sly-test.classes="hero ${model.heroClasses @ join=' '}"></sly>
+  <sly data-sly-test="${resource.hasChildren}">
+    <section class="${classes}">
+      <div class="hero-body">
         <sly data-sly-list="${resource.children}">
           <sly data-sly-resource="${item}"></sly>
         </sly>
-      </sly>
-    </div>
-  </section>
+      </div>
+    </section>
+  </sly>
+</sly>
+<sly data-sly-test="${!resource.hasChildren}">
+  <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+       data-sly-call="${lib.placeholder @ classes=classes}"></sly>
 </sly>
