--- a/application/backend/src/main/resources/apps/bulma/components/tiles/tileparent/tileparent.html
+++ b/application/backend/src/main/resources/apps/bulma/components/tiles/tileparent/tileparent.html
@@ -26,8 +26,7 @@
   </sly>
   <sly data-sly-test="${!resource.hasChildren}">
     <sly data-sly-test.modelClasses="tile ${model.classes @ join=' '}"></sly>
-    <sly data-sly-test.placeholderClasses="${['column m-3', modelClasses] @ join=' '}"></sly>
     <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
-         data-sly-call="${lib.placeholder @ classes=placeholderClasses}"></sly>
+         data-sly-call="${lib.placeholder @ classes=modelClasses}"></sly>
   </sly>
 </sly>
