--- a/application/backend/src/main/resources/apps/bulma/components/buttons/buttons.html
+++ b/application/backend/src/main/resources/apps/bulma/components/buttons/buttons.html
@@ -16,13 +16,11 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.ButtonsListComponent">
-  <div data-sly-unwrap="${!wcmmode.isEdit}" style="min-width: 125px; min-height: 50px">
-    <sly data-sly-test="${resource.hasChildren}">
-      <div class="buttons ${model.hasAddons ? 'has-addons ' : ''}${model.alignment}">
-        <sly
-            data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
-      </div>
-    </sly>
-  </div>
+<sly data-sly-use.model="pl.ds.bulma.components.models.ButtonsComponent">
+  <sly data-sly-test="${resource.hasChildren}">
+    <div class="buttons ${model.buttonsClasses @ join=' '}">
+      <sly
+          data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+    </div>
+  </sly>
 </sly>
