--- a/application/backend/src/main/resources/apps/bulma/components/navbar/navbaritem/navbaritem.html
+++ b/application/backend/src/main/resources/apps/bulma/components/navbar/navbaritem/navbaritem.html
@@ -24,7 +24,7 @@
           <i class="${model.icon}"></i>
         </span>
       </sly>
-      ${model.label}
+      <span>${model.label}</span>
     </a>
   </sly>
   <sly data-sly-test="${model.type == 'image'}">
