--- a/application/backend/src/main/resources/apps/bulma/components/page/body.html
+++ b/application/backend/src/main/resources/apps/bulma/components/page/body.html
@@ -16,6 +16,9 @@
   ~
 */-->
 
-<body class="${properties.defaultTemplateCSS}">
+<sly data-sly-test.navbarFixed="${properties.navbarFixed}"></sly>
+<sly data-sly-test.position="${properties.navbarFixedPosition}"></sly>
+
+<body class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
 <sly data-sly-include="body-content.html"></sly>
 </body>
